--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,12 +12,18 @@
     "@nextui-org/react": "^1.0.0-beta.12",
     "autoprefixer": "10.4.14",
     "dgram": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "net": "^1.0.2",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.1",
     "tello-drone": "^3.0.6",
-    "tellojs": "^0.1.153"
+    "tellojs": "^0.1.153",
+    "tls": "^0.0.1"
   }
 }
